product list html agregado

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -16,9 +16,9 @@
 
         <div id="displayed-menu">
             <ul>
-                <li><a href="">Novedades</a></li>
-                <li><a href="">Mujeres</a></li>
-                <li><a href="">Hombres</a></li>
+                <li><a href="/products/list">Novedades</a></li>
+                <li><a href="/products/list/mujeres">Mujeres</a></li>
+                <li><a href="/products/list/hombres">Hombres</a></li>
             </ul>
         </div>
 
