--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -16,7 +16,7 @@
 
         <div id="displayed-menu">
             <ul>
-                <li><a href="/products/list">Novedades</a></li>
+                <li><a href="/products/list/novedades">Novedades</a></li>
                 <li><a href="/products/list/mujeres">Mujeres</a></li>
                 <li><a href="/products/list/hombres">Hombres</a></li>
             </ul>
