--- a/public/css/productListStyle.css
+++ b/public/css/productListStyle.css
@@ -25,206 +25,21 @@ body {
     margin: unset;
 }
 
+/* Titulos */
 
-button {
-    background-color: var(--blue);
-    border-radius: 20px;
-    border: none;
-    color:var(--white);
-    font-family: inherit;
-    font-size: 14px;
-    font-weight: 500;
-    padding: 5px 10px;
-    transition: background-color 0.3s;
-}
-
-button:hover {
-    background-color: var(--darkblue);
-}
-
-/* Breadcrumbs */
-
-.breadcrumbs ul {
-    display: flex;
-    font-size: 14px;
-    margin-bottom: 0px;
-    list-style-type: none;
-    padding: 15px;
-}
-
-.breadcrumbs li {
-    padding: 5px 5px;
-}
-
-.breadcrumbs i {
-    font-size: 10px;
-}
-
-/* Product area */
-
-.product-area {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.flex-items {
-    width: 100%;
-}
-
-/* Product photos */
-
-.product-photos {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-/* NOTA: NO SUPE ARREGLAR EL ESPACIO EXTRA DEBAJO DE LAS SIDE PICS*/
-
-.side-pics {
-    box-sizing: border-box;
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0;
-    padding: 0;
-    vertical-align: bottom;
-    width: 100%;
-}
-
-.side-pic {
-    line-height: 0;
-    padding: 0px 5px;
-    width: 30%;
-    height: 70%;
-    display: block;
-}
-
-.side-pic img {
-    width: 100%;
-    object-fit: cover;
-}
-
-.main-pic {
-    order: -1;
-    margin-top: 10px;
-}
-
-.main-pic img {
-    width: 100%;
-    height: 80vh;
-    object-fit: cover;
-}
-
-/* Product details */
-
-.product-details {
-    padding: 0px 25px;
-}
-
-/* Product info */
-
-.mobile {
-    padding: 0px 25px;
-}
-
-.desktop {
-    display: none;
-}
-
-.product-info h1 {
-    font-size: 24px;
-    margin: 0;
-    margin-bottom: 5px;
-    padding: 0;
-}
-
-.product-info p {
-    margin: 0;
-    margin-bottom: 5px;
-}
-
-.product-info .precio-producto {
-    font-weight: 500;
-}
-
-.product-info .star-rating {
-    color: var(--orange);
-}
-
-/* Product selection */
-
-.product-selection div {
-    margin-bottom: 5px;
-}
-
-.product-selection label {
-    display: block;
-    font-weight: 500;
-    margin: 20px 0px 10px;
-}
-
-.product-size {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 0px 20px;
-}
-
-.product-size  label {
-    margin-top: 10px;
-    width: 100%;
-}
-
-.product-selections {
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.product-selection select {
-    margin-top: 3px;
-    width: 100px;
-    height: 35px;
-}
-
-.product-buttons {
-    margin-top: 25px;
+.categoria-titulo{
     text-align: center;
 }
 
-.product-buttons button{
-    margin: 13px 5px;
-    padding: 5px 0px;
-    width: 80%;
+.categoria-titulo h1{
+    border-bottom: 4px solid var(--orange);
+    display: inline-block;
+    font-size: 24px;
+    margin: 0;
+    margin-bottom: 30px;
+    padding: 0;
+    padding-top: 20px;
 }
-
-.product-buttons #carrito {
-    border: 2.5px var(--orange) solid;
-    background-color: var(--orange);
-    color: var(--white);
-}
-
-.product-buttons #carrito:hover {
-    border: 2.5px var(--darkorange) solid;
-    background-color: var(--darkorange);
-}
-
-.product-buttons #favoritos {
-    border: 2.5px var(--blue) solid;
-    background-color: var(--white);
-    color: var(--blue);
-}
-
-.product-buttons #favoritos:hover {
-    background-color: var(--blue);
-    color: var(--white);
-}
-
-aside {
-    padding: 0px 25px;
-    font-size: 14px;
-}
-
-/* Titulos */
 
 h2 {
     font-size: 20px;
@@ -234,7 +49,7 @@ h2 {
 
 /* Articulos parecidos */
 
-#productos-parecidos {
+#productos {
     font-size: 14px;
     padding: 0px 20px;
     display: flex;
@@ -242,226 +57,59 @@ h2 {
     justify-content: space-around;
 }
 
-#productos-parecidos h2 {
+#productos h2 {
     width: 100%;
 }
 
-.producto-parecido {
+.producto {
     margin-bottom: 30px;
     text-align: center;
     width: 45%;
 }
 
-.producto-parecido a:hover {
+.producto a:hover {
     color: var(--darkgray);
 }
 
-.foto-parecido{
+.foto-producto{
     margin: 1px 1px;
     display: block;
     overflow: hidden;
     width: 100%;
 }
 
-#productos-parecidos img {
+#productos img {
     transition: transform 0.5s;
     vertical-align: middle;
     width: 100%;
 }
 
-.foto-parecido:hover > img {
+.foto-producto:hover > img {
     transform: scale(1.1);
     vertical-align: middle;
 }
 
-.producto-parecido p {
+.producto p {
     margin: 0;
 }
 
-.producto-parecido .titulo-producto {
+.producto .titulo-producto {
   font-weight: 500;  
 }
 
-.producto-parecido .precio-producto {
+.producto .precio-producto {
     font-weight: 600;  
   }
 
-/* Reseñas */
-
-.reviews {
-    padding: 0px 20px;
-}
-
-.user-review {
-    margin: 0px 0px 15px;
-}
-
-.reviews p {
-    margin: 5px 0px;
-}
-
-.review-title {
-    font-weight: 500;
-}
-
-.reviews .star-rating i {
-    color: var(--orange);
-}
-
-p.review-desc{
-    font-size: 14px;
-    margin-bottom: 0;
-}
-
-p.review-user{
-    margin: 0;
-    font-size: 12px;
-    color: var(--blue);
-}
-
-.new-review {
-    text-align: center;
-    margin: 0px 0px 15px;
-}
-
-.new-review p {
-    font-weight: 500;
-}
-
-.new-review input {
-    border-color: var(--lightgray);
-    border-radius: 5px;
-    font-family: inherit;
-    height: 20px;
-    margin-bottom: 10px;
-    width: 70%;
-}
-
-.new-review textarea{
-    border-color: var(--lightgray);
-    border-radius: 5px;
-    width: 70%;
-    height: 50px;
-    font-family: inherit;
-}
-
-.new-review button{
-    border: 2.5px var(--blue) solid;
-    margin: 13px 5px;
-    padding: 5px 0px;
-    width: 60%;
-}
-
-@media (min-width: 560px) { 
-
-    .product-size{
-        padding: 0px 40px;
-    }
-}
-
 @media (min-width: 720px) {
-
-    .product-area {
-        margin-top: 10px;
-    }
-
-    .flex-items {
-        width: 30%;
-    }
-
-    /* Product photos */
-
-    .product-photos.flex-items {
-        padding: 0px 20px;
-        display: flex;
-        flex-wrap: wrap;
-        width: 55%;
-    }
-    
-    .side-pics {
-        width: 20%;
-    }
-    
-    .side-pic {
-        width: 100%;
-        height: 50px;
-    }
-
-    .side-pic img {
-        width: 100%;
-    }
-    
-    .main-pic {
-        margin: 0;
-        width: 75%;
-        order: 0;
-    }
-    
-    .main-pic img {
-        width: 100%;
-        height: 60vh;
-    }
-
-    /* Product details */
-
-    .mobile {
-        display: none;
-    }
-
-    .desktop {
-        display: block;
-    }
-
-    .product-details form {
-        font-size: 12px;
-    }
-
-    .product-size {
-        padding: 0;
-    }
-
-    .product-buttons button{
-        display: block;
-    }
-
-    .product-selections label {
-        margin-top: 10px;
-    }
-
-    .product-selections {
-        justify-content: space-between;
-    }
-    
-    .product-selection select {
-        width: 85px;
-        height: 25px;
-    }
-
-    .product-buttons button{
-        margin: 13px 0px;
-        padding: 3px 0px;
-        width: 100%;
-    }
-
-    /* Aside */
-     
-    aside.flex-items {
-        font-size: 12px;
-        width: 100%;
-    }
-
-    aside.flex-items p {
-        padding: 0px 100px;
-        margin: 0;
-    }
 
     /* Parecidos */
 
-    .producto-parecido {
-        width: 20%;
+    .producto {
+        width: 22%;
     }
 
-    #productos-parecidos {
+    #productos {
         padding: 0px 40px;
     }
 
@@ -471,71 +119,9 @@ p.review-user{
         width: 100%;
     }
 
-    /* Reseñas */
-
-    .reviews {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-evenly;
-    }
-
-    .reviews h2 {
-        margin-top: 10px;
-        width: 100%;
-    }
-
-    .user-reviews{
-        width: 35%;
-    }
-
-    .new-review{
-        width: 55%;
-    }
-
 }
 
 @media (min-width: 890px) { 
-
-    .product-area {
-        margin-left: 60px;
-    }
-
-    /* Product photos */
-
-    .product-photos.flex-items {
-        width: 45%;
-    }
-
-    .main-pic img {
-        width: 100%;
-        height: 80vh;
-    }
-
-    /* Product details */
-
-
-    .product-details.flex-items {
-        width: 25%;
-    }
-
-    .product-selections {
-        justify-content: flex-start;
-    }
-
-    .product-color {
-        margin-left: 20%;
-    }
-
-    /* Aside */
-     
-    aside.flex-items {
-        width: 10%;
-    }
-
-    aside.flex-items p {
-        padding: 0px 0px;
-        margin: 5px 0px;
-    }
 
     /* Titulos */
 
@@ -545,12 +131,12 @@ p.review-user{
 
     /* Parecidos */
 
-    #productos-parecidos {
+    #productos {
         justify-content: space-evenly;
     }
 
-    .producto-parecido {
-        width: 20%;
+    .producto {
+        width: 22%;
     }
 
 }
