--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -71,7 +71,7 @@
                 <i class="fas fa-chevron-left"></i>
             </div>
 
-            <% for (let i = 0; i < productos.length; i++) { %>
+            <% for (let i = 0; i < 4; i++) { %>
 
             <article class="producto-favorito">
                 
