--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -162,7 +162,7 @@
 
             <h2>Articulos parecidos</h2>
 
-            <% for (let i = 0; i < productos.length; i++) { %>
+            <% for (let i = 0; i < 4; i++) { %>
 
             <article class="producto-parecido">
                 
