product create y cart

--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -16,7 +16,7 @@
 
         <div id="displayed-menu">
             <ul>
-                <li><a href="/products/list/novedades">Novedades</a></li>
+                <li><a href="/products/list/unisex">Unisex</a></li>
                 <li><a href="/products/list/mujeres">Mujeres</a></li>
                 <li><a href="/products/list/hombres">Hombres</a></li>
             </ul>
@@ -36,8 +36,8 @@
         </div>
 
         <ul>
-            <li><a href="/login"><i class="fas fa-user"></i></a></li>
-            <li><a href="/cart"><i class="fas fa-shopping-cart"></i></a></li>
+            <li><a href="/user/login"><i class="fas fa-user"></i></a></li>
+            <li><a href="/user/cart"><i class="fas fa-shopping-cart"></i></a></li>
         </ul>
 
     </div>
