--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -85,7 +85,7 @@
 
                         <div class="product-size">
 
-                            <label for="size">Tamaño</label>
+                            <label for="size">Talla</label>
 
                             <% for (let i = 0; i < producto.tamano.length; i++) { %>
 
