--- a/src/views/products/productCreate.ejs
+++ b/src/views/products/productCreate.ejs
@@ -3,7 +3,7 @@
 <head>
 
     <%- include( "../partials/head" ) %>
-    <link href="/css/productListStyle.css" rel="stylesheet"/>
+    <link href="/css/productCreateStyle.css" rel="stylesheet"/>
     
 </head>
 <body>
@@ -21,35 +21,35 @@
             <form action="/create" method="POST">
 
                 <div>
-                    <label for="nombre">Nombre: </label>
-                    <input type="text" name="Nombre">
+                    <label for="nombre" class="label">Nombre</label>
+                    <input class="input-text" type="text" name="Nombre">
                 </div>
                 <div>
-                    <label for="precio">Precio: </label>
-                    <input type="number" name="precio">
+                    <label for="precio" class="label">Precio</label>
+                    <input class="input-text" type="number" name="precio">
                 </div>
                 <div>
-                    <label for="desc">Descripción: </label>
+                    <label for="desc" class="label">Descripción</label>
                     <textarea name="desc" maxlength="40"></textarea>
                 </div>
                 <div>
-                    <label for="categoria">Categoría: </label>
+                    <label for="categoria" class="label">Categoría</label>
                     <select name="categoria">
-                        <option>Hombre</option>
-                        <option>Mujer</option>
                         <option>Unisex</option>
+                        <option>Mujer</option>
+                        <option>Hombre</option>
                     </select>
                 </div>
                 <div>
-                    <label for="tipo">Tipo: </label>
+                    <label for="tipo" class="label">Tipo: </label>
                     <select name="tipo">
-                        <option>Tenis</option>
                         <option>Ropa</option>
+                        <option>Tenis</option>
                         <option>Accesorio</option>
                     </select>
                 </div>
                 <div>
-                    <label for="talla">Tallas: </label>
+                    <label for="talla" class="label">Tallas</label>
                         <input type="checkbox" value="XS" name="talla">XS
                         <input type="checkbox" value="S" name="talla">S
                         <input type="checkbox" value="M" name="talla">M
@@ -57,7 +57,7 @@
                         <input type="checkbox" value="XL" name="talla">XL
                 </div>
                 <div>
-                    <label for="color">Colores: </label>
+                    <label for="color" class="label">Colores</label>
                         <input type="checkbox" value="Azul" name="color">Azul
                         <input type="checkbox" value="Verde" name="color">Verde
                         <input type="checkbox" value="Amarillo" name="color">Amarillo
@@ -66,16 +66,19 @@
                         <input type="checkbox" value="Rojo" name="color">Rojo
                         <input type="checkbox" value="Morado" name="color">Morado
                         <input type="checkbox" value="Negro" name="color">Negro
+                        <input type="checkbox" value="Blanco" name="color">Blanco
                 </div>
                 <div>
-                    <label for="mainPic">Imagen: </label>
+                    <label for="mainPic" class="label">Imagen</label>
                     <input type="file" accept="image/*" name="mainPic">
                 </div>
                 <div>
-                    <label for="thumbnail">Thumbnail: </label>
+                    <label for="thumbnail" class="label">Thumbnail</label>
                     <input type="file" accept="image/*" name="thumbnail">
                 </div>
-
+                <div>
+                <button type="submit">Agregar</button>
+                </div>
             </form>
 
         </div>
