product y user json

--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -16,9 +16,9 @@
 
             <ul>
                 
-                <li><a href=""><%=producto.breadcrumb[0]%></a></li>
+                <li><a href=""><%=producto.categoria%></a></li>
                 <li><i class="fas fa-chevron-right"></i></li>
-                <li><a href=""><%=producto.breadcrumb[1]%></a></li>
+                <li><a href=""><%=producto.tipo%></a></li>
                 <li><i class="fas fa-chevron-right"></i></li>
                 <li><a href=""><%=producto.nombre%></a></li>
 
