--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -16,9 +16,9 @@
 
         <div id="displayed-menu">
             <ul>
-                <li><a href="/products/list/unisex">Unisex</a></li>
-                <li><a href="/products/list/mujeres">Mujeres</a></li>
-                <li><a href="/products/list/hombres">Hombres</a></li>
+                <li><a href="/products/">Unisex</a></li>
+                <li><a href="/products/">Mujeres</a></li>
+                <li><a href="/products/">Hombres</a></li>
             </ul>
         </div>
 
