--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -192,7 +192,7 @@
                 <div class="user-review">
 
                     <p class="review-title"><%=review[i].titulo%></p>
-                    <p class="star-rating"><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i><i class="far fa-star"></i></p>
+                    <p class="star-rating"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i></p>
                     <p class="review-desc"><%=review[i].desc%></p>
                     <p class="review-user">@<%=review[i].usuario%></p>
                     <hr>
